# postquantum-file-encryption

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Directory.Build.props  KNOWN-GAPS.md  PostQuantum.FileEncryption.slnx  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  VERSION-RECONCILIATION.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/scripts/: verify-reproducibility.sh
.github/workflows/: benchmarks.yml  ci.yml  codeql.yml  dependency-review.yml  docs.yml  fuzz.yml  pages.yml  release.yml  reproducibility.yml  scorecard.yml
audit-scripts/: ADVERSARIAL-AUDIT.md  SECURITY-AUDIT.md
benchmarks/PostQuantum.FileEncryption.Benchmarks/: HybridThroughputBenchmarks.cs  PostQuantum.FileEncryption.Benchmarks.csproj  Program.cs  ThroughputBenchmarks.cs
docfx/: docfx.json  index.md
docs/: ANNOUNCE.md  AUDIT-GUIDE.md  BENCHMARKS.md  COMPARISON.md  CONFORMANCE.md  DEPLOYMENT.md  DISCOVERABILITY.md  FILE-FORMAT.md  FUZZING.md  GOLD-STANDARD.md  HYBRID-COMBINER.md  KEY-MANAGEMENT.md  MIGRATION.md  REPRODUCIBLE-BUILDS.md  ROADMAP-2.0.md  ROADMAP-v3.md  SECURITY-ARCHITECTURE.md  SIGNATURE-FORMAT.md  SUPPLY-CHAIN.md  TEST-VECTORS.md  THREAT-MODEL.md  VERSIONING.md
oss-fuzz/: Dockerfile  README.md  build.sh  project.yaml
samples/pqfe-wasm/: .gitignore  Cargo.toml
samples/pqfe-wasm/examples/: pqfe_io.rs
samples/pqfe-wasm/fuzz/: Cargo.toml
samples/pqfe-wasm/fuzz/fuzz_targets/: decrypt.rs
samples/pqfe-wasm/src/: lib.rs
samples/pqfe-wasm/tests/: vectors.rs
(+101 files in other folders)
