[package]
name = "pqfe-wasm"
version = "0.1.0"
edition = "2021"
description = "Browser (WebAssembly) re-implementation of the PostQuantum.FileEncryption .pqfe v2 container format"
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
aes-gcm = "0.10"
pbkdf2 = "0.13"
sha2 = "0.10"
argon2 = "0.5"
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
base64 = "0.22"

[profile.release]
opt-level = "z"
lto = true
